[package]
name = "pisti"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fl2rust = "0.4.7"
fltk = { version = "1.1.11", features = ["fltk-bundled"] }
rand = "0.8.4"
strum = "0.21.0"
strum_macros = "0.21.1"
