[package]
name = "pisti"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
fltk = {version = "1.1.19", features = ["fltk-bundled"]}
fltk-flex = "0.1.3"
fltk-theme = "0.1.8"
rand = "0.8.4"
serde = {version = "1.0.130", features = ["derive"] }
strum = "0.21.0"
strum_macros = "0.21.1"
